correct spacing

--- a/css/style.css
+++ b/css/style.css
@@ -74,7 +74,9 @@ font-weight:bold;
 font-size: 14px;
 }
 
-
+h2{
+  text-align:center;
+}
 
 
 
